# legendary-succotash

./: .gitignore  README.md  Taskfile.yml
court/: .gitignore  Cargo.toml  go.mod  main.go  taskfile.yaml
court/migrations/2024-02-04-225642_create_recipes/: down.sql  up.sql
court/migrations/2024-03-02-162117_users/: up.sql
court/migrations/2024-03-08-165200_sessions/: up.sql
court/migrations/2024-04-14-184526_users-spotify-keys/: down.sql  up.sql
court/prototash/: prototash.proto  taskfile.yaml
court/src/: errors.rs  lib.rs  main.rs  schema.rs  tests.rs
court/src/models/: mod.rs  session.rs  spotify.rs  users.rs
court/src/routes/: auth0.rs  mod.rs  session.rs  spotify_auth.rs  spotify_example.rs  succotash.rs
court/src/services/: auth0.rs  mod.rs  spotify.rs  spotify_example.rs  spotify_tokens.rs  succotash.rs  users.rs
lodge/: package-lock.json  package.json  taskfile.yaml
lodge/public/: index.html  manifest.json
lodge/src/: App.test.tsx  App.tsx  index.css  main.tsx
lodge/src/components/: Card.tsx  Counter.tsx  ExampleCard.tsx  Landing.tsx  Login.tsx  MuiExample.tsx  RecipeButton.tsx  RecipeProvider.tsx  Session.tsx  TestNotLanding.tsx
lodge/src/components/context/: session.ts
lodge/src/components/gui/: ExampleCard.tsx  RecipeButton.tsx  Tab.tsx  TabBody.tsx  TabContainer.tsx  TestToolTabBody.tsx
lodge/src/components/route/: Protected.tsx
lodge/src/i18n/: i18n.ts
lodge/src/i18n/en/: translation.json
lodge/src/sass/: main.scss
lodge/src/sass/_base/: _base.scss
lodge/src/sass/_components/: _button.scss  _card.scss  _header.scss  _logo.scss  _tab-container.scss
lodge/src/sass/_vars/: _colours.scss  _fonts.scss  _variables.scss
lodge/src/services/: ExampleOfHowThingsCouldWork.ts  HowThingsAreGenerated.ts  HowWeWantThem.ts  baseClient.ts  session.ts  spotifyExample.ts  succotash.ts
