[package]
name = "court"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[dependencies]
crypto-hash = "0.3.4"
diesel = { version = "2.1.4", features = ["postgres"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.2.0"
rand = "0.8.5"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
rocket_cors = { version = "0.6.0", default-features = false }
rspotify = { version = "0.12.0", features = ["env-file"] }
rspotify-http = "0.12.0"
serde_json = "1.0.113"
thiserror = "1.0.57"
ts-rs = "7.1"
proc-macro2 = "1.0.82"
quote = "1.0.36"
syn = "2.0.63"

[dependencies.rocket]
version = "0.5.0"
features = ["json"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_postgres_pool"]
